# AI-Engineer

./: README.md
Github Actions/fastapi-tutorial/: Run_Commands.md
Langgraph/: Basics.ipynb  requirements.txt
Langgraph/Basics/: Basic.py  Basics.ipynb
Langgraph/Chatbot/: Tools.ipynb  Tools.py  requirements.txt
MCP/: README.md  pyproject.toml  run_client.py  run_server.py
MCP/src/calculator/: __init__.py  client.py  server.py
Openai Agents/Agent/: 01_Simple_Agent.py  02_Graph_Visualization.py  03_Guardrails.py  04_Manager_Agent.py  new.py
Openai Agents/Agent SDK/: agents-sdk-intro.ipynb  agents-sdk-intro.py
Pydantic/: Intro.ipynb
codex/: package-lock.json  package.json
codex/app/: layout.tsx  page.tsx
