[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-calculator"
version = "0.1.0"
description = "A simple MCP calculator server"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mcp",
    "httpx",
]

[project.scripts]
calculator = "calculator:main"
